fix: handle null career in enrollment flows and NPE in assignment file access